some shadows, fix date

--- a/_posts/2019-01-27-releases.md
+++ b/_posts/2019-01-27-releases.md
@@ -11,8 +11,10 @@ releases the last weeks, including for lots of private communications with frien
 We consider our January 2019 releases, even if a significant milestone, 
 only another beginning for more fun and interesting things to evolve ... 
 
-<img src="../assets/blog/2019-01-chatlist.png" width="150" style="float: left; margin: 10px" /> 
-<img src="../assets/blog/2019-01-chat.png" width="150" style="float: left; margin: 10px" /> 
+<img src="../assets/blog/2019-01-chatlist.png" width="120" 
+style="float: left; margin: 10px;display: block;box-shadow: 5px 5px 2px #777;" /> 
+<img src="../assets/blog/2019-01-chat.png" width="120" 
+style="float: left; margin: 10px;display: block;box-shadow: 5px 5px 2px #777;" /> 
 
 **Delta/Android 0.100.0**: code was completely revamped and we just
 triggered an F-droid release and soon (tm) are aiming for G-play as
@@ -47,8 +49,8 @@ with a mobile app.  Chat messages and encryption can be shared between Delta app
 using the same e-mail account.  Desktop offers **multi-account support** which
 all other platforms don't offer yet. 
 
-<img src="../assets/blog/ios_screenshot_chat_list.png" width="150" style="float: left; margin: 10px" /> 
-<img src="../assets/blog/ios_screenshot_chat_view.png" width="150" style="float: left; margin: 10px" /> 
+<img src="../assets/blog/ios_screenshot_chat_list.png" width="150" style="float: left; margin: 10px;" />
+<img src="../assets/blog/ios_screenshot_chat_view.png" width="150" style="float: left; margin: 10px;" />
 
 **Delta/iOS Preview 7**: an iPhone app installable via Testflight.
 Delta/iOS offers basic setup, (encrypted) chatting and sending and 
