refined project/people listing

--- a/_posts/2019-01-27-releases.md
+++ b/_posts/2019-01-27-releases.md
@@ -98,8 +98,8 @@ When it comes to thanking and mentioning people i'd like to mention a few more s
   Delta-XI in Kyiv](https://delta.chat/en/2018-11-17-deltaxi),
   the [OpenPGPsummit 2018](https://delta.chat/en/2018-10-22-openpgpsummit) 
   and other gatherings.  We received and receive a lot of useful help
-  and advise and continue to evolve collaborations with several projects,
-  among them DAT, Sequoia/pEp, Briar, IPFS, Secure Scuttlebut, K-9 Mail 
+  and advise and continue to evolve collaborations with several people
+  from projects such as K-9 Mail, DAT, Autocrypt, Sequoia/pEp, Briar, IPFS, Secure Scuttlebut
   to name a few. 
   
 So thanks everyone and let's see what other interesting releases and
