--- a/_posts/2019-01-27-releases.md
+++ b/_posts/2019-01-27-releases.md
@@ -16,11 +16,11 @@ style="float: left; margin: 10px;display: block;box-shadow: 5px 5px 2px #777;" /
 <img src="../assets/blog/2019-01-chat.png" width="120" 
 style="float: left; margin: 10px;display: block;box-shadow: 5px 5px 2px #777;" /> 
 
-**Delta/Android 0.100.0**: code was completely revamped and we just
+**Delta/Android 0.100.0**: code was entirely revamped and we just
 triggered an F-droid release and soon (tm) are aiming for G-play as
 well. The [new Android code](https://github.com/deltachat/deltachat-android) 
 is based on Signal's UI code instead of the Telegram UI code used for the previous
-0.20 F-droid release.  By this, 20-30 long-standing issues could be closed
+0.20 F-droid release.  By this bold half-rewrite, 20-30 long-standing issues could be closed
 and we have a much nicer and more maintainable code base now -- yay! 
 
 Note that we also worked hard to bring back the UX look and feel
