delete superflous mention

--- a/_posts/2019-01-27-releases.md
+++ b/_posts/2019-01-27-releases.md
@@ -65,8 +65,7 @@ Please checkout the [github repository](https://github.com/deltachat/deltachat-i
 to report bugs or contribute code. 
 
 <img src="../assets/blog/debian-nd-100.png" width="50" style="float: left; margin: 10px" /> 
-**deltachat-core on Debian**: Micah Anderson who also had
-joined us in Kyiv and advises DeltaChat on several levels, managed 
+**deltachat-core on Debian**: Micah Anderson who also advises DeltaChat on several levels, managed 
 to bring [deltachat core 0.39.1 into Debian/Unstable](https://tracker.debian.org/pkg/deltachat-core). Many thanks to Drebs and Janka for helping this effort along! 
 
 [new Transifex language repo](https://www.transifex.com/delta-chat/delta-chat-app/dashboard/)
