--- a/sq/contribute.po
+++ b/sq/contribute.po
@@ -1,6 +1,6 @@
 # Translators:
 # Björn Petersen <r10s@b44t.com>, 2018
-# Besnik <besnik@programeshqip.org>, 2018
+# Besnik <besnik@programeshqip.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-27 01:15+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Besnik <besnik@programeshqip.org>, 2018\n"
+"Last-Translator: Besnik <besnik@programeshqip.org>, 2019\n"
 "Language-Team: Albanian (https://www.transifex.com/delta-chat/teams/76181/sq/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,19 +32,23 @@ msgstr ""
 
 #: ../en/contribute.md:7
 msgid "# Channels and repositories"
-msgstr ""
+msgstr "# Kanale dhe depo"
 
 #: ../en/contribute.md:10
 msgid ""
 "- [Delta Chat support forum](https://support.delta.chat) for wider\n"
 "  feature discussions and getting support ."
 msgstr ""
+"- [Forumi i asistencës për Delta Chat](https://support.delta.chat) për\n"
+"  diskutime më të gjera mbi veçori dhe për të marrë asistencë."
 
 #: ../en/contribute.md:12
 msgid ""
 "- [#deltachat on freenode]({%include webirc-url %}) for day to day "
 "communications."
 msgstr ""
+"- [#deltachat në freenode]({%include webirc-url %}) për komunikim të "
+"përditshëm."
 
 #: ../en/contribute.md:16
 msgid ""
@@ -52,16 +56,21 @@ msgid ""
 "  list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
 "  for community discussions and news."
 msgstr ""
+"- [Listë postimesh Delta Chat]\n"
+"  (https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
+"  për diskutime dhe lajme nga bashkësia."
 
 #: ../en/contribute.md:19
 msgid ""
 "- [Delta Chat repositories](https://github.com/deltachat/) where you can \n"
 "  can find the code for DeltaChat apps and this web site."
 msgstr ""
+"- [Depo Delta Chat-i](https://github.com/deltachat/) ku mund të gjeni \n"
+"  kodin për aplikacionet DeltaChat dhe këtë sajt."
 
 #: ../en/contribute.md:21
 msgid "# Translations and Bug Reports "
-msgstr ""
+msgstr "# Përkthime dhe Njoftime të Metash "
 
 #: ../en/contribute.md:27
 msgid ""
@@ -71,20 +80,27 @@ msgid ""
 "- [Delta Chat iOS Issues](https://github.com/deltachat/deltachat-ios/issues)\n"
 "- [Core Library + Python Issues](https://github.com/deltachat/deltachat-core/issues)"
 msgstr ""
+"- [Përkthime në Transifex](https://www.transifex.com/delta-chat/public/)\n"
+"- [Çështje Delta Chat-i nën Android](https://github.com/deltachat/deltachat-android/issues)\n"
+"- [Çështje Delta Chat-i nën Desktop](https://github.com/deltachat/deltachat-desktop/issues)\n"
+"- [Çështje Delta Chat-i nën iOS](https://github.com/deltachat/deltachat-ios/issues)\n"
+"- [Çështje të Librarisë Bazë + Python](https://github.com/deltachat/deltachat-core/issues)"
 
 #: ../en/contribute.md:30
 msgid ""
 "We are always looking for developers who want to help along and are familiar with \n"
 "C, Rust, Java, Swift, Javascript or Python on Android, iOS, Windows, Linux or Mac."
 msgstr ""
+"Kërkojmë përherë për zhvillues që duan të ndihmojnë dhe dinë C, Rust, Java, \n"
+"Swift, Javascript ose Python për Android, iOS, Windows, Linux ose Mac."
 
 #: ../en/contribute.md:33
 msgid "# Donate Money or devices"
-msgstr ""
+msgstr "# Dhuroni para ose pajisje"
 
 #: ../en/contribute.md:35
 msgid "If you want to support DeltaChat with money:"
-msgstr ""
+msgstr "Nëse dëshironi të përkrahsni DeltaChat-in me para:"
 
 #: ../en/contribute.md:39
 msgid ""
