--- a/sq/help.po
+++ b/sq/help.po
@@ -1,6 +1,6 @@
 # Translators:
 # Björn Petersen <r10s@b44t.com>, 2018
-# Besnik <besnik@programeshqip.org>, 2018
+# Besnik <besnik@programeshqip.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-27 01:15+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Besnik <besnik@programeshqip.org>, 2018\n"
+"Last-Translator: Besnik <besnik@programeshqip.org>, 2019\n"
 "Language-Team: Albanian (https://www.transifex.com/delta-chat/teams/76181/sq/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -89,6 +89,18 @@ msgid ""
 "- _Trustworthy_ - can even be used for business messages\n"
 "- fully _Open Source_ and _Standards_ based"
 msgstr ""
+"- _I pavarur_ nga kompani apo shërbime. Të dhënat tuaja janë pronë e _juaja_.\n"
+"- Të dhënat tuaja nuk ruhen në ndonjë shërbyes qendror; në këtë mënyrë, ndryshe nga shumica e programeve të tjera për shkëmbim mesazhesh, Delta Chat-i madje i mbron tejtëdhënat tuaja (kush i shkruan dhe kujt i shkruan?)\n"
+"- Librin tuaj të adresave nuk ia jepni kujt.\n"
+"- _I shpejtë_, përmes përdorimit të Push-IMAP\n"
+"- _Baza më e madhe e përdoruesve_ - mund të mbërrihet edhe te marrës që _nuk_ përdorin Delta Chat-in\n"
+"- _I përputhshëm_ - jo vetëm me veten\n"
+"- Ndërfaqe përdoruesi _elegante_ dhe _e thjeshtë_\n"
+"- Sistem i _shpërndarë_\n"
+"- _Pa Mesazhe të Padëshiruar_ - si parazgjedhje, shfaqen vetëm mesazhe nga përdorues të njohur\n"
+"- _I qëndrueshëm_ - i parrezik për përdorim profesional\n"
+"- _I besueshëm_ - mund të përdoret madje edhe për mesazhe biznesi\n"
+"- plotësisht me _Burim të Hapur_ dhe i bazuar në _Standarde_"
 
 #: ../en/help.md:36
 msgid "## What if the receiver does not use Delta Chat?"
@@ -116,6 +128,9 @@ msgid ""
 "- Messages from contacts **contacted by you**\n"
 "- **Replies** to messages sent by you"
 msgstr ""
+"- Mesazhe nga kontakte prej **librit tuaj të adresave**\n"
+"- Mesazhe nga kontakte **të kontaktuar nga ju**\n"
+"- **Përgjigje** ndaj mesazheve dërguar nga ju"
 
 #: ../en/help.md:48
 msgid ""
@@ -123,7 +138,7 @@ msgid ""
 "in the main menu at **Contact requests** and, if desired, start a chat from "
 "there."
 msgstr ""
-"Mesazhe të tjerë nuk shfaqen automatikisht. Mesazhet e tjerë mund t’i shihni"
+"Mesazhet e tjera nuk shfaqen automatikisht. Mesazhet e tjerë mund t’i shihni"
 " te menuja kryesore te **Kërkesa kontakti** dhe, në daçi, të filloni bisedë "
 "që prej atje."
 
@@ -137,6 +152,9 @@ msgid ""
 "- As messages from unknown contacts do not pop up automatically, normally, there's **no spam**.\n"
 "- However, if needed, you can **block** any contact."
 msgstr ""
+"- Mesazhet në dosje të zakonshme mesazhesh të padëshiruar shpërfillen dhe adresat në ta nuk konsiderohen si kontakte të njohur.\n"
+"- Meqë mesazhet prej kontaktesh të panjohur nuk shfaqen vetvetiu, normalisht, **s’ka mesazhe të padëshiruar**.\n"
+"- Sido qoftë, nëse duhet vërtet, mund të **bllokoni** cilindo kontakt."
 
 #: ../en/help.md:56
 msgid "## Does Delta Chat support images, videos and other attachments?"
@@ -179,10 +197,13 @@ msgid ""
 "- On the following screen, select the **group members** and hit the check mark in the upper right corner. After that, you can define a **group name**.\n"
 "- As soon as you write the **first message** in the group, all members are informed about the new group and can answer in the group (as long as you do not write a message in the group the group is invisible to the members)."
 msgstr ""
+"- Përzgjidhni **Shtoni grup** që nga \"menuja sanduiç\" në cepin e sipërm djathtas te skena bazë e bisedave.\n"
+"- Te skena vijuese, përzgjidhni **anëtarët e grupit** dhe i vini shenjë kutizës në cepin e sipërm djathtas. Pas kësaj, mund të përcaktoni një **emër grupi**.\n"
+"- Sapo të shkruani **mesazhin tuaj të parë** në grup, krejt anëtarët e mësojnë krijimin e grupit të ri dhe mund të përgjigjen te grupi (për sa kohë që nuk shkruani një mesazh te grupi, grupi është i padukshëm për anëtarët)."
 
 #: ../en/help.md:72
 msgid "## Who to add members to a group?"
-msgstr ""
+msgstr "## Kush mund të shtojë anëtarë te një grup?"
 
 #: ../en/help.md:75
 msgid ""
@@ -194,7 +215,7 @@ msgstr ""
 
 #: ../en/help.md:77
 msgid "## What is a verified group?"
-msgstr ""
+msgstr "## Ç’është një grup i verifikuar?"
 
 #: ../en/help.md:84
 msgid ""
@@ -205,6 +226,13 @@ msgid ""
 "  implementation changes makes sense. Recent discussions can be found here: \n"
 "  https://countermitm.readthedocs.io/en/latest/new.html"
 msgstr ""
+"- Një \"grup i verifikuar\" është një veçori eksperimentale (flasim për Janarin e 2019-s). \n"
+"  Duke shtuar njëri-tjetrin përmes skanimesh kodi QR një grup anëtarësh të \"verifikuar\" mund \n"
+"   të bisedojnë me njëri-tjetrin. Kjo do të thotë zbatim i detyrueshëm i fshehtëzimit e2e për grupin, \n"
+"  që është i parrezik kundrejt furnizuesit të shërbimit ose sulmesh nga rrjeti. \n"
+"  Megjithatë, disa prova me përdorues dhe përshtypje prej tyre sugjerojnë se ndryshimet UX \n"
+"  dhe të sendërtimit ia vlejnë. Diskutimet më të freskëta mund të gjenden këtu: \n"
+"  https://countermitm.readthedocs.io/en/latest/new.html"
 
 #: ../en/help.md:86
 msgid "## I have deleted myself by accident."
@@ -215,6 +243,8 @@ msgid ""
 "- As you're no longer a group member now, you cannot add yourself again. \n"
 "  However, no problem, just ask any other group member in a normal chat to add you again."
 msgstr ""
+"- Ngaqë s’jeni më anëtar i grupit, s’mund të shtoni veten sërish. \n"
+"  Megjithatë, s’ka problem, thjesht kërkojini një anëtari tjetër të grupit në një fjalosje të zakonshme t’ju shtojë sërish."
 
 #: ../en/help.md:91
 msgid "## I do not want to receive the messages of a group any longer."
@@ -225,12 +255,16 @@ msgid ""
 "- Either delete yourself from the member list or delete the whole chat. \n"
 "  If you want to join the group later again, ask another group member to add you again."
 msgstr ""
+"- Ose fshini veten nga grupi si anëtar i listës, ose fshini krejt bisedën. \n"
+"  Nëse doni të ribëheni pjesë e grupit, kërkojini një anëtari tjetër të grupit t’ju shtojë sërish."
 
 #: ../en/help.md:97
 msgid ""
 "- As an alternative, you can also \"Mute\" a group - doing so, you'll get all messages and \n"
 "  can still write but you're no longer notified of any new messages."
 msgstr ""
+"- Ndryshe, mundeni edhe ta \"Heshtoni\" një grup - duke bërë këtë, do të merrni krejt mesazhet dhe \n"
+"  prapë mund të shkruani, por nuk njoftoheni më për çfarëdo mesazhesh të rinj."
 
 #: ../en/help.md:99
 msgid "# Encryption {#encryption}"
@@ -238,13 +272,16 @@ msgstr "# Fshehtëzim {#encryption}"
 
 #: ../en/help.md:101
 msgid "## Does Delta Chat support end-to-end-encryption?"
-msgstr ""
+msgstr "## A ka Delta Chat-i fshehtëzim skaj-më-skaj?"
 
 #: ../en/help.md:104
 msgid ""
 "- Yes. DeltaChat implements the Autocrypt Level 1 standard and can \n"
 "  thus e2e-encrypt messages with other Autocrypt-capable apps. "
 msgstr ""
+"- Po. DeltaChat sendërton standardin Autocrypt Level 1 \n"
+"  dhe është pra në gjendje të fshehtëzojë mesazhe me e2e-n \n"
+"  përmes aplikacionesh të tjera të afta të përdorin Autocrypt-in. "
 
 #: ../en/help.md:106
 msgid "## What do I have to do to activate the end-to-end-encryption?"
@@ -263,12 +300,20 @@ msgid ""
 "  If one of the chat partners uses a non-Autocrypt e-mail app later \n"
 "  messages are not encrypted until an Autocrypt-compliant app is available again. "
 msgstr ""
+"- Aplikacionet Delta Chat (dhe të tjerë aplikacione email të aftë për [Autocrypt](https://autocrypt.org))\n"
+"  përdorin automatikisht të njëjtat kyçe të domosdoshëm për fshehtëzim \n"
+"  skaj-më-skaj, teksa dërgohen mesazhet e para. Pas kësaj, krejt mesazhet \n"
+"  pasues fshehtëzohen automatikisht skaj-më-skaj. Nëse një nga partnerët \n"
+"  në bisedë, më pas, përdor një aplikacion email që nuk mbulon Autocrypt-in, \n"
+"  mesazhet nuk fshehtëzohen, derisa të ketë sërish një aplikacion të aftë për Autocrypt-in. "
 
 #: ../en/help.md:118
 msgid ""
 "- If you want to _deactivate_ the end-to-end-encryption, \n"
 "  use the corresponding setting at \"Settings / Advanced settings\"."
 msgstr ""
+"- Nëse doni të _çaktivizohet_ fshehtëzimi skaj-më-skaj, \n"
+"  përdorni fushën përkatës te \"Rregullime / Rregullime të mëtejshme\"."
 
 #: ../en/help.md:120
 msgid ""
@@ -281,6 +326,8 @@ msgstr ""
 msgid ""
 "- No. With most e-mail servers _transport encryption_ (TLS) is used then."
 msgstr ""
+"- Jo. Me shumicën e shërbyesve për email, në këtë rast, përdoret _transport "
+"encryption_ (TLS)."
 
 #: ../en/help.md:125
 msgid "## How can I check the encryption?"
@@ -292,6 +339,9 @@ msgid ""
 "message is end-to-end-encrypted _and_ is sent from the given sender _and_ "
 "your answer will be end-to-end-encrypted as well."
 msgstr ""
+"- Nëse në krah të mesazhit shfaqet një **dry** i vockël, kjo do të thotë që "
+"mesazhi është i fshehtëzuar skaj-më-skaj _dhe_ është dërguar nga dërguesi i "
+"dhënë _dhe_ përgjigja juaj edhe ajo do të fshehtëzohet."
 
 #: ../en/help.md:129
 msgid ""
@@ -299,6 +349,10 @@ msgid ""
 " because you or the sender have disabled end-to-end-encryption or the sender"
 " uses an app that does not support end-to-end-encryption."
 msgstr ""
+"- Nëse **s’ka dry**, zakonisht mesazhi udhëton me transport të fshehtëzuar ,"
+" p.sh., ngaqë ju ose dërguesi keni çaktivizuar fshehtëzimin skaj-më-skaj, "
+"ose sepse përdoruesi përdor një aplikacion që nuk e mbulon fshehtëzimin "
+"skaj-më-skaj."
 
 #: ../en/help.md:132
 msgid "## How can I verify the sender?"
@@ -315,20 +369,26 @@ msgid ""
 "  they will introduce a chat channel with each other (if it doesn't exist already) \n"
 "  and also the encryption keys will be verified. "
 msgstr ""
+"- Mund të prekni mbi \"Kod Ftese QR\" te Android dhe mandej përdorni butonin \n"
+"  “skanoni kod QR” te pajisja tjetër që të skanoni këtë kod.  Nëse që të dyja \n"
+"  pajisjet janë në linjë, do të vendosin një kanal bisede me njëra-tjetrën \n"
+"  (nëse ky s’ekziston tashmë) dhe do të verifikohen edhe kyçet e fshehtëzimit. "
 
 #: ../en/help.md:142
 msgid ""
 "- For an end-to-end-encryption, Delta Chat shows two fingerprints there. \n"
 "  If they are the same on the device of your chat partner, the connection is safe."
 msgstr ""
+"- Për fshehtëzim skaj-më-skaj, Delta Chat shfaq dy shenja gishtash. \n"
+"  Nëse ata janë të njëjtë me ata te pajisja e partnerit tuaj në bisedë, lidhja është e sigurt."
 
 #: ../en/help.md:144
 msgid "- For transport encryption, this state is just shown there"
-msgstr ""
+msgstr "- Për fshehtëzim të transportit, gjendja thjesht tregohet atje"
 
 #: ../en/help.md:147
 msgid "## Which standards are used for end-to-end-encryption?"
-msgstr "## Cilët standarde përdoren për fshehtëzim skaj-më-skaj."
+msgstr "## Cilët standarde përdoren për fshehtëzim skaj-më-skaj?"
 
 #: ../en/help.md:149
 msgid ""
@@ -338,7 +398,7 @@ msgstr ""
 
 #: ../en/help.md:151
 msgid "## Can I re-use my existing private key?"
-msgstr ""
+msgstr "## A mund të ripërdor kyçin tim ekzistues privat?"
 
 #: ../en/help.md:153
 msgid ""
@@ -366,6 +426,9 @@ msgid ""
 "If you don't have a key or don't even know you would need one - don't worry:"
 " Delta Chat generates one as needed, you don't have to hit a button for it. "
 msgstr ""
+"Nëse s’keni kyç ose as që e dinit se mund t’ju duhej një i tillë… mos u bëni"
+" merak: Delta Chat-i prodhon një të tillë, kur duhet, dhe s’keni gjë për të "
+"bërë. "
 
 #: ../en/help.md:159
 msgid "# Multi-client {#multiclient}"
@@ -382,24 +445,32 @@ msgid ""
 "If you want to use the **same account** on different (Autocrypt\n"
 "capable) devices, you have to synchronize their encryption capabilities: "
 msgstr ""
+"Nëse doni të përdorni **të njëjtën llogari** në pajisje të ndryshme (të afta \n"
+"për Autocrypt), lypset të njëkohësoni aftësitë e tyre për fshehtëzim: "
 
 #: ../en/help.md:167
 msgid ""
 "- On the first device, choose \"Advanced settings / Send Autocrypt Setup message\" \n"
 "  and click until a \"security number\" is shown. "
 msgstr ""
+"- Në pajisjen e parë, zgjidhni \"Rregullime të mëtejshme / Dërgo mesazh Rregullimi Autocrypt-i\" \n"
+"  dhe klikoni derisa të shfaqet një \"numër sigurie\". "
 
 #: ../en/help.md:170
 msgid ""
 "- On the other device, wait for the \"Autocrypt Setup Message\" to\n"
 "  arrive and click on it which should prompt you for the security number. "
 msgstr ""
+"- Në pajisjen tjetër, pritni të mbërrijë \"Mesazh Rregullimi Autocrypt-i\" \n"
+"  dhe klikoni mbi të, që do të duhej t’ju kërkonte numrin e sigurisë. "
 
 #: ../en/help.md:173
 msgid ""
 "- you are now successfully synchronized and can use both devices for\n"
 "  sending and receiving e2e-encrypted messages with your communication partners. "
 msgstr ""
+"- tani jeni i njëkohësuar me sukses dhe mund të përdorni që të dyja pajisjet për\n"
+"  marrje dhe dërgim mesazhesh, të fshehtëzuar nën e2e, me partnerët tuaj në komunikim. "
 
 #: ../en/help.md:175
 msgid "# Miscellaneous"
