--- a/sq/index.po
+++ b/sq/index.po
@@ -1,5 +1,6 @@
 # Translators:
 # Björn Petersen <r10s@b44t.com>, 2018
+# Besnik <besnik@programeshqip.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -8,7 +9,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-27 01:15+0200\n"
 "PO-Revision-Date: 2018-03-23 12:35+0000\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Besnik <besnik@programeshqip.org>, 2019\n"
 "Language-Team: Albanian (https://www.transifex.com/delta-chat/teams/76181/sq/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,35 +32,43 @@ msgstr ""
 
 #: ../en/index.md:7
 msgid "# Chat over e-mail and head back to the future with us!"
-msgstr ""
+msgstr "# Bisedoni përmes email-i dhe drejtohuni për nga ardhmja, me ne!"
 
 #: ../en/index.md:9
 msgid ""
 "<img src=\"../assets/logos/delta-chat.svg\" width=\"160\" style=\"float: "
 "left; margin: 20px;\" />"
 msgstr ""
+"<img src=\"../assets/logos/delta-chat.svg\" width=\"160\" style=\"float: "
+"left; margin: 20px;\" />"
 
 #: ../en/index.md:12
 msgid ""
 "**Delta Chat is like Telegram or Whatsapp but without the tracking or central control.**\n"
 "Check out our [GDPR compliancy statement](gdpr)."
 msgstr ""
+"**Delta Chat-i është si puna e Telegram-it ose Whatsapp-it, por pa gjurmim apo kontroll qendror.**\n"
+"Shihni [deklaratën tonë për përputhshmëri me GDPR-në](gdpr)."
 
 #: ../en/index.md:15
 msgid ""
 "**DeltaChat has no own servers** but uses the most massive and diverse open messaging \n"
 "system ever: the existing e-mail server network."
 msgstr ""
+"**DeltaChat-i nuk ka shërbyes të vetët**, por përdor sistemin më masiv dhe më të larmishëm \n"
+"të hapët për shkëmbime mesazhesh: rrjetin ekzistues të shërbyesve për email."
 
 #: ../en/index.md:18
 msgid ""
 "**Chat with anyone if you know their e-mail address, no need for them to install DeltaChat!** \n"
 "All you need is a standard e-mail account."
 msgstr ""
+"**Bisedoni me këdo, nëse dini adresën e tyre email, s’ka nevojë që të instalojnë DeltaChat-in!** \n"
+"Krejt çka ju duhet është një llogari standarde email-i."
 
 #: ../en/index.md:21
 msgid "# Screenshots Android, Desktop and iOS "
-msgstr ""
+msgstr "# Foto ekrani nga aplikacioni për Android, Desktop dhe iOS "
 
 #: ../en/index.md:26
 msgid ""
@@ -68,21 +77,31 @@ msgid ""
 "<img src=\"../assets/blog/2019-01-chat.png\" width=\"120\" \n"
 "style=\"float: left; margin: 10px;display: block;box-shadow: 5px 5px 2px #777;\" /> "
 msgstr ""
+"<img src=\"../assets/blog/2019-01-chatlist.png\" width=\"120\" \n"
+"style=\"float: left; margin: 10px;display: block;box-shadow: 5px 5px 2px #777;\" /> \n"
+"<img src=\"../assets/blog/2019-01-chat.png\" width=\"120\" \n"
+"style=\"float: left; margin: 10px;display: block;box-shadow: 5px 5px 2px #777;\" /> "
 
 #: ../en/index.md:28
 msgid ""
 "<img src=\"../assets/blog/desktop-screenshot.png\" width=\"280\" "
 "style=\"float:left; margin: 10px\" /> "
 msgstr ""
+"<img src=\"../assets/blog/desktop-screenshot.png\" width=\"280\" "
+"style=\"float:left; margin: 10px\" /> "
 
 #: ../en/index.md:30
 msgid ""
 "<img src=\"../assets/blog/ios_screenshot_chat_view.png\" width=\"110\" "
 "style=\"margin: 10px\" /> "
 msgstr ""
+"<img src=\"../assets/blog/ios_screenshot_chat_view.png\" width=\"110\" "
+"style=\"margin: 10px\" /> "
 
 #: ../en/index.md:33
 msgid ""
 "Please check our [January 2019 release blog post](../en/2019-01-27-releases) \n"
 "for information on current releases. "
 msgstr ""
+"Ju lutemi, për të dhëna mbi hedhjet aktuale në qarkullim, shihni \n"
+"[postimin tonë në blog mbi hedhjet në qarkullim për janarin e 2019-s](../en/2019-01-27-releases). "
