--- a/sq/gdpr.po
+++ b/sq/gdpr.po
@@ -1,5 +1,5 @@
 # Translators:
-# Björn Petersen <r10s@b44t.com>, 2019
+# Besnik <besnik@programeshqip.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -8,7 +8,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-28 00:32+0200\n"
 "PO-Revision-Date: 2019-01-27 23:24+0000\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2019\n"
+"Last-Translator: Besnik <besnik@programeshqip.org>, 2019\n"
 "Language-Team: Albanian (https://www.transifex.com/delta-chat/teams/76181/sq/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,40 +25,49 @@ msgid ""
 "---"
 msgstr ""
 "---\n"
-"title: GDPR\n"
+"title: GDPR dhe Privatësia\n"
 "layout: default-sq\n"
 "---"
 
 #: ../en/gdpr.md:7
 msgid "# Privacy by Design"
-msgstr ""
+msgstr "# Privatësi që në koncept"
 
 #: ../en/gdpr.md:10
 msgid ""
 "- **Confidentiality**: End-to-end encryption by default, by implementing [Autocrypt\n"
 "  Level 1](https://autocrypt.org)."
 msgstr ""
+"- **Fshehtësi**: Fshehtëzim skaj-më-skaj, si parazgjedhje, përmes sendërtimit të [Autocrypt\n"
+"  Level 1](https://autocrypt.org)."
 
 #: ../en/gdpr.md:12
 msgid ""
 "- **Data minimization**: No alignment or uploading of the address-book "
 "content."
 msgstr ""
+"- **Minimizim trafiku të dhënash**: Pa kopjime apo ngarkime lënde të librit "
+"tuaj të adresave nga shërbime diku."
 
 #: ../en/gdpr.md:14
 msgid ""
 "- **Data avoidance**: No Delta Chat server, no processing of personal data."
 msgstr ""
+"- **Larg të dhënave**: Pa shërbyes Delta Chat, pa përpunim të dhënash "
+"personale."
 
 #: ../en/gdpr.md:17
 msgid "# Further Compliance to the GDPR "
-msgstr ""
+msgstr "# Përputhshmëri e Mëtejshme me GDPR -në"
 
 #: ../en/gdpr.md:19
 msgid ""
 "- Does not require any **consent** (article 7 GDPR) from the users or their "
 "contacts (data subjects), because no address-book-data is transmitted."
 msgstr ""
+"- S’lyp ndonjë *lejim** (neni 7 i GDPR-së) prej përdoruesve apo kontakteve "
+"të tyre (subjekte të dhënash), ngaqë s’ka transmetim të dhënash libri "
+"adresash."
 
 #: ../en/gdpr.md:21
 msgid ""
@@ -66,18 +75,25 @@ msgid ""
 "controller (organisation), because no additional third party will process "
 "the E-Mail related personal data. "
 msgstr ""
+"- Mund të përdoret **pa u dashur një kontratë apo udhëzime** nga ndonjë "
+"kontrollues (ent), ngaqë të dhënat personale të lidhura me email-in nuk do "
+"të përpunohen nga ndonjë palë e tretë shtesë. "
 
 #: ../en/gdpr.md:23
 msgid ""
 "# How data controllers (organizations) benefit from using Delta Chat in "
 "complying to the GDPR"
 msgstr ""
+"# Si përfitojnë kontrolluesit (entet) e të dhënave nga përdorimi i Delta "
+"Chat-it në përputhje me GDPR-në"
 
 #: ../en/gdpr.md:26
 msgid ""
 "- Creates **no additional information requirements** for the controller towards direct or indirect data subjects \n"
 "  regarding any collection of address-book-data, article 13, 14 GDPR."
 msgstr ""
+"- **Nuk krijon domosdoshmëri shtesë mbi të dhënat** për kontrolluesin kundrejt subjektesh të drejtpërdrejtë ose të tërthortë të të dhënave \n"
+"  lidhur me grumbullim të dhënash librash adresash, neni 13, 14 GDPR."
 
 #: ../en/gdpr.md:28
 msgid ""
@@ -85,6 +101,9 @@ msgid ""
 "Chat (Article 35 GDPR), because it processes no particular additional data "
 "beyond E-Mail messenging."
 msgstr ""
+"- Për Delta Chat-in, s’ka nevojë të bëhet **auditim ndikimi mbi mbrojtje të "
+"dhënash** (Neni 35 i GDPR-së), ngaqë nuk përpunon të dhëna të veçanta "
+"shtesë, tej pjesës së nevojshme për funksionimin e email-it."
 
 #: ../en/gdpr.md:33
 msgid ""
@@ -93,6 +112,10 @@ msgid ""
 "  on eventual **evidence documentation**, (article 30 GDPR) \n"
 "  as well as on the **data protection certification process**, Article 25 (3), 42 GDPR."
 msgstr ""
+"- Shtimi i masave mbi privatësinë të Delta Chat-it te \n"
+"  **regjistri i veprimtarive të përpunimit** mund të kenë një ndikim pozitiv \n"
+"  në  **dokumentim të mëvonshëm evidence**, (neni 30 i GDPR-së), \n"
+"  si dhe mbi **procesin e certifikimit për mbrojtje të dhënash**, neni 25 (3), 42 GDPR."
 
 #: ../en/gdpr.md:36
 msgid ""
