--- a/de/contribute.po
+++ b/de/contribute.po
@@ -1,5 +1,7 @@
 # Translators:
-# Björn Petersen <r10s@b44t.com>, 2018
+# T M <graue70@posteo.de>, 2019
+# Björn Petersen <r10s@b44t.com>, 2019
+# Sebastian Schmitt <schmitt.sebastian@mailbox.org>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -8,7 +10,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-28 00:32+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Björn Petersen <r10s@b44t.com>, 2018\n"
+"Last-Translator: Sebastian Schmitt <schmitt.sebastian@mailbox.org>, 2019\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,19 +33,23 @@ msgstr ""
 
 #: ../en/contribute.md:7
 msgid "# Channels and repositories"
-msgstr ""
+msgstr "# Kanäle und Quellen"
 
 #: ../en/contribute.md:10
 msgid ""
 "- [Delta Chat support forum](https://support.delta.chat) for wider\n"
 "  feature discussions and getting support ."
 msgstr ""
+"- [Delta Chat Support Forum](https://support.delta.chat) für ausführlichere\n"
+"  Diskussionen über Features und um Hilfe zu erhalten ."
 
 #: ../en/contribute.md:12
 msgid ""
 "- [#deltachat on freenode]({%include webirc-url %}) for day to day "
 "communications."
 msgstr ""
+"- [#deltachat auf freenode]({%include webirc-url %}) für die tägliche "
+"Kommunikation."
 
 #: ../en/contribute.md:16
 msgid ""
@@ -51,16 +57,21 @@ msgid ""
 "  list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
 "  for community discussions and news."
 msgstr ""
+"- [Delta Chat Mailingliste\n"
+"  list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
+"  für Community Diskussionen und Neuigkeiten."
 
 #: ../en/contribute.md:19
 msgid ""
 "- [Delta Chat repositories](https://github.com/deltachat/) where you can \n"
 "  can find the code for DeltaChat apps and this web site."
 msgstr ""
+"- [Delta Chat Quellen](https://github.com/deltachat/) in denen Sie\n"
+"  den Code für DeltaChat-Anwendungen und diese Website finden können."
 
 #: ../en/contribute.md:21
 msgid "# Translations and Bug Reports "
-msgstr ""
+msgstr "# Übersetzungen und Fehlerberichte"
 
 #: ../en/contribute.md:27
 msgid ""
@@ -70,20 +81,27 @@ msgid ""
 "- [Delta Chat iOS Issues](https://github.com/deltachat/deltachat-ios/issues)\n"
 "- [Core Library + Python Issues](https://github.com/deltachat/deltachat-core/issues)"
 msgstr ""
+"- [Übersetzungen auf Transifex](https://www.transifex.com/delta-chat/public/)\n"
+"- [Delta Chat Android Probleme](https://github.com/deltachat/deltachat-android/issues)\n"
+"- [Delta Chat Desktop Probleme](https://github.com/deltachat/deltachat-desktop/issues)\n"
+"- [Delta Chat iOS Probleme](https://github.com/deltachat/deltachat-ios/issues)\n"
+"- [Kernbibliothek + Python Probleme](https://github.com/deltachat/deltachat-core/issues)"
 
 #: ../en/contribute.md:30
 msgid ""
 "We are always looking for developers who want to help along and are familiar with \n"
 "C, Rust, Java, Swift, Javascript or Python on Android, iOS, Windows, Linux or Mac."
 msgstr ""
+"Wir suchen immer nach Entwicklern, die helfen möchten und sich auskennen mit \n"
+"C, Rust, Java, Swift, Javascript oder Python auf Android, iOS, Windows, Linux oder Mac."
 
 #: ../en/contribute.md:33
 msgid "# Donate Money or devices"
-msgstr ""
+msgstr "# Spende Geld oder Geräte"
 
 #: ../en/contribute.md:35
 msgid "If you want to support DeltaChat with money:"
-msgstr ""
+msgstr "Wenn Sie DeltaChat mit Geld unterstützen wollen:"
 
 #: ../en/contribute.md:39
 msgid ""
