--- a/de/download.po
+++ b/de/download.po
@@ -1,6 +1,9 @@
 # Translators:
-# Björn Petersen <r10s@b44t.com>, 2018
 # violoncello.ch, 2019
+# T M <graue70@posteo.de>, 2019
+# Björn Petersen <r10s@b44t.com>, 2019
+# Sebastian Schmitt <schmitt.sebastian@mailbox.org>, 2019
+# happyreacer <c.dummert@googlemail.com>, 2019
 # 
 #, fuzzy
 msgid ""
@@ -9,7 +12,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-01-28 00:32+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: violoncello.ch, 2019\n"
+"Last-Translator: happyreacer <c.dummert@googlemail.com>, 2019\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -32,7 +35,7 @@ msgstr ""
 
 #: ../en/download.md:7
 msgid "## Delta/Android (Beta)"
-msgstr ""
+msgstr "## Delta/Android (Beta)"
 
 #: ../en/download.md:10
 msgid ""
@@ -52,44 +55,57 @@ msgid ""
 "* [Download APK](https://github.com/deltachat/deltachat-android/releases) (experienced users only)\n"
 "* [View Changelog]({% include changelog-url %}), [contribute to the Android repo](https://github.com/deltachat/deltachat-android/). "
 msgstr ""
+"* [Über F-Droid herunterladen](https://f-droid.org/app/com.b44t.messenger)\n"
+"* [APK herunterladen](https://github.com/deltachat/deltachat-android/releases) (nur erfahrende Benutzer)\n"
+"* [Änderungsprotokoll lesen]({% include changelog-url %}), [bei den Android Quellen mitwirken](https://github.com/deltachat/deltachat-android/). "
 
 #: ../en/download.md:19
 msgid "## Delta/Desktop Downloads (Beta)"
-msgstr ""
+msgstr "## Delta/Desktop Downloads (Beta)"
 
 #: ../en/download.md:21
 msgid ""
 "Delta/Desktop is well usable and can be operated standalone or in "
 "conjunction with Android or iOS. "
 msgstr ""
+"Delta/Desktop ist gut verwendbar und kann einzeln oder in Verbindung mit "
+"Android oder iOS betrieben werden. "
 
 #: ../en/download.md:23
 msgid ""
 "* [download for Linux or Mac from our github release "
 "page](https://github.com/deltachat/deltachat-desktop/releases/).  "
 msgstr ""
+"* [Download für Linux oder Mac von unserer Github Release "
+"Website](https://github.com/deltachat/deltachat-desktop/releases/).  "
 
 #: ../en/download.md:25
 msgid ""
 "* [Windows support pending, help needed!](https://github.com/deltachat"
 "/deltachat-desktop/issues/606) "
 msgstr ""
+"* [Windows-Support steht noch aus, Hilfe wird "
+"benötigt!](https://github.com/deltachat/deltachat-desktop/issues/606) "
 
 #: ../en/download.md:27
 msgid ""
 "* [FAQ multiclient](help#multiclient) page on how to synchronize Desktop "
 "with another Delta app. "
 msgstr ""
+"* [FAQ Multiclient](help#multiclient) Hilfe zur Synchronisation von Desktop "
+"mit einer anderen Delta-Applikation "
 
 #: ../en/download.md:30
 msgid ""
 "* [View Changelog](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md),\n"
 "  [contribute to Desktop repository](https://github.com/deltachat/deltachat-desktop/). "
 msgstr ""
+"* [Changelog anzeigen](https://github.com/deltachat/deltachat-desktop/blob/master/CHANGELOG.md),\n"
+"  [zu den Desktop-Quellen beitragen](https://github.com/deltachat/deltachat-desktop/). "
 
 #: ../en/download.md:33
 msgid "## Delta/iOS on TestFlight (Beta)"
-msgstr ""
+msgstr "## Delta/iOS auf TestFlight (Beta)"
 
 #: ../en/download.md:35
 msgid ""
@@ -106,6 +122,8 @@ msgid ""
 "Delta/iOS supports basic functionality but not all features offered by Android or Desktop. \n"
 "Betas are distributed via Testflight. "
 msgstr ""
+"Delta/iOS unterstützt grundlegende Funktionen, aber nicht alle Features, die für Android oder Desktop angeboten werden. \n"
+"Betas werden über Testflight verteilt."
 
 #: ../en/download.md:40
 msgid ""
@@ -121,11 +139,11 @@ msgstr ""
 
 #: ../en/download.md:44
 msgid "- Scan this QR code with the camera app of your iPhone/iPad"
-msgstr ""
+msgstr "- Diesen QR-Code mit der Kamera-App des iPhone/iPad scannen"
 
 #: ../en/download.md:46
 msgid "  ![QRCode](../assets/home/deltachat_testflight_qrcode.png)"
-msgstr ""
+msgstr "  ![QRCode](../assets/home/deltachat_testflight_qrcode.png)"
 
 #: ../en/download.md:49
 msgid "# Verify Downloads"
@@ -144,12 +162,16 @@ msgid ""
 "* For F-Droid downloads:  \n"
 "  `{% include fingerprint-f-droid %}`"
 msgstr ""
+"* Für F-Droid downloads:  \n"
+"  `{% include fingerprint-f-droid %}`"
 
 #: ../en/download.md:57
 msgid ""
 "* Other APK downloads:  \n"
 "  `{% include fingerprint-local %}`"
 msgstr ""
+"* Andere APK downloads:  \n"
+"  `{% include fingerprint-local %}`"
 
 #: ../en/download.md:60
 msgid ""
