--- a/de/download.po
+++ b/de/download.po
@@ -1,18 +1,18 @@
 # Translators:
 # violoncello.ch, 2019
 # T M <graue70@posteo.de>, 2019
-# Björn Petersen <r10s@b44t.com>, 2019
 # Sebastian Schmitt <schmitt.sebastian@mailbox.org>, 2019
 # happyreacer <c.dummert@googlemail.com>, 2019
+# Björn Petersen <r10s@b44t.com>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-28 00:32+0200\n"
+"POT-Creation-Date: 2019-01-28 16:51+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: happyreacer <c.dummert@googlemail.com>, 2019\n"
+"Last-Translator: Björn Petersen <r10s@b44t.com>, 2019\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -34,8 +34,8 @@ msgstr ""
 "---"
 
 #: ../en/download.md:7
-msgid "## Delta/Android (Beta)"
-msgstr "## Delta/Android (Beta)"
+msgid "# Delta/Android Downloads (Beta)"
+msgstr "# Delta/Android Downloads (Beta)"
 
 #: ../en/download.md:10
 msgid ""
@@ -60,8 +60,8 @@ msgstr ""
 "* [Änderungsprotokoll lesen]({% include changelog-url %}), [bei den Android Quellen mitwirken](https://github.com/deltachat/deltachat-android/). "
 
 #: ../en/download.md:19
-msgid "## Delta/Desktop Downloads (Beta)"
-msgstr "## Delta/Desktop Downloads (Beta)"
+msgid "# Delta/Desktop Downloads (Beta)"
+msgstr "# Delta/Desktop Downloads (Beta)"
 
 #: ../en/download.md:21
 msgid ""
@@ -104,8 +104,8 @@ msgstr ""
 "  [zu den Desktop-Quellen beitragen](https://github.com/deltachat/deltachat-desktop/). "
 
 #: ../en/download.md:33
-msgid "## Delta/iOS on TestFlight (Beta)"
-msgstr "## Delta/iOS auf TestFlight (Beta)"
+msgid "# Delta/iOS on TestFlight (Beta)"
+msgstr "# Delta/iOS auf TestFlight (Beta)"
 
 #: ../en/download.md:35
 msgid ""
