--- a/pl/download.po
+++ b/pl/download.po
@@ -1,14 +1,15 @@
 # Translators:
 # Telegram Polska <sebek@life.pl>, 2019
+# Björn Petersen <r10s@b44t.com>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-28 00:32+0200\n"
+"POT-Creation-Date: 2019-01-28 16:51+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Telegram Polska <sebek@life.pl>, 2019\n"
+"Last-Translator: Björn Petersen <r10s@b44t.com>, 2019\n"
 "Language-Team: Polish (https://www.transifex.com/delta-chat/teams/76181/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -30,8 +31,8 @@ msgstr ""
 "---"
 
 #: ../en/download.md:7
-msgid "## Delta/Android (Beta)"
-msgstr "## Delta/Android (Beta)"
+msgid "# Delta/Android Downloads (Beta)"
+msgstr "# Delta/Android (Beta)"
 
 #: ../en/download.md:10
 msgid ""
@@ -57,8 +58,8 @@ msgstr ""
 "* [Zobacz dziennik zmian]({% include changelog-url %}), [wnieś coś do repozytorium Android](https://github.com/deltachat/deltachat-android/). "
 
 #: ../en/download.md:19
-msgid "## Delta/Desktop Downloads (Beta)"
-msgstr "## Delta/Desktop (Beta)"
+msgid "# Delta/Desktop Downloads (Beta)"
+msgstr "# Delta/Desktop (Beta)"
 
 #: ../en/download.md:21
 msgid ""
@@ -101,8 +102,8 @@ msgstr ""
 "  [wnieś coś do repozytorium Desktop](https://github.com/deltachat/deltachat-desktop/). "
 
 #: ../en/download.md:33
-msgid "## Delta/iOS on TestFlight (Beta)"
-msgstr "## Delta/iOS na TestFlight (Beta)"
+msgid "# Delta/iOS on TestFlight (Beta)"
+msgstr "# Delta/iOS na TestFlight (Beta)"
 
 #: ../en/download.md:35
 msgid ""
