--- a/sq/download.po
+++ b/sq/download.po
@@ -1,15 +1,15 @@
 # Translators:
-# Björn Petersen <r10s@b44t.com>, 2018
 # Besnik <besnik@programeshqip.org>, 2019
+# Björn Petersen <r10s@b44t.com>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-01-28 00:32+0200\n"
+"POT-Creation-Date: 2019-01-28 16:51+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
-"Last-Translator: Besnik <besnik@programeshqip.org>, 2019\n"
+"Last-Translator: Björn Petersen <r10s@b44t.com>, 2019\n"
 "Language-Team: Albanian (https://www.transifex.com/delta-chat/teams/76181/sq/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,8 +31,8 @@ msgstr ""
 "---"
 
 #: ../en/download.md:7
-msgid "## Delta/Android (Beta)"
-msgstr "## Delta/Android (Beta)"
+msgid "# Delta/Android Downloads (Beta)"
+msgstr "# Shkarkime të Delta/Android (Beta)"
 
 #: ../en/download.md:10
 msgid ""
@@ -59,8 +59,8 @@ msgstr ""
 "* [Shihni Regjistër ndryshimesh]({% include changelog-url %}), [kontribuoni te zhvillimi për Android](https://github.com/deltachat/deltachat-android/). "
 
 #: ../en/download.md:19
-msgid "## Delta/Desktop Downloads (Beta)"
-msgstr "## Shkarkime të Delta/Desktop (Beta)"
+msgid "# Delta/Desktop Downloads (Beta)"
+msgstr "# Shkarkime të Delta/Desktop (Beta)"
 
 #: ../en/download.md:21
 msgid ""
@@ -103,8 +103,8 @@ msgstr ""
 "  [kontribuoni te zhvillimi i versionit Desktop](https://github.com/deltachat/deltachat-desktop/). "
 
 #: ../en/download.md:33
-msgid "## Delta/iOS on TestFlight (Beta)"
-msgstr "## Delta/iOS nën TestFlight (Beta)"
+msgid "# Delta/iOS on TestFlight (Beta)"
+msgstr "# Delta/iOS nën TestFlight (Beta)"
 
 #: ../en/download.md:35
 msgid ""
