--- a/de/contribute.po
+++ b/de/contribute.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-16 15:37+0200\n"
+"POT-Creation-Date: 2019-02-24 12:01+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
 "Last-Translator: Sven, 2019\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
@@ -59,8 +59,7 @@ msgid ""
 "  list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
 "  for community discussions and news."
 msgstr ""
-"- [Delta Chat Mailingliste\n"
-"  list](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
+"- [Delta Chat Mailingliste](https://lists.codespeak.net/postorius/lists/delta.codespeak.net/) \n"
 "  für Community Diskussionen und Neuigkeiten."
 
 #: ../en/contribute.md:19
