--- a/de/help.po
+++ b/de/help.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-16 15:37+0200\n"
+"POT-Creation-Date: 2019-02-24 12:01+0200\n"
 "PO-Revision-Date: 2018-03-23 12:39+0000\n"
 "Last-Translator: Sven, 2019\n"
 "Language-Team: German (https://www.transifex.com/delta-chat/teams/76181/de/)\n"
@@ -178,7 +178,10 @@ msgstr "## Unterstützt Delta Chat HTML-E-Mails?"
 msgid ""
 "- Yes. If incoming email lacks a plain text part, we convert HTML-emails to "
 "plain text ourselves. Outgoing emails always use plain text."
-msgstr "- Ja."
+msgstr ""
+"- Ja. Falls die eingehende E-Mail über keinen Nur-Text-Teil verfügt, "
+"konvertieren wir HTML-E-Mails selbst. In ausgehenden E-Mails wird immer Nur-"
+"Text verwendet."
 
 #: ../en/help.md:64
 msgid "# Groups"
