--- a/es/index.po
+++ b/es/index.po
@@ -1,15 +1,15 @@
 # Translators:
-# björn petersen <r10s@b44t.com>, 2018
 # Asiel Díaz Benítez <asieldbenitez@gmail.com>, 2019
+# björn petersen <r10s@b44t.com>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-16 15:37+0200\n"
+"POT-Creation-Date: 2019-02-24 12:01+0200\n"
 "PO-Revision-Date: 2018-03-23 12:35+0000\n"
-"Last-Translator: Asiel Díaz Benítez <asieldbenitez@gmail.com>, 2019\n"
+"Last-Translator: björn petersen <r10s@b44t.com>, 2019\n"
 "Language-Team: Spanish (https://www.transifex.com/delta-chat/teams/76181/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,9 +52,12 @@ msgstr ""
 
 #: ../en/index.md:15
 msgid ""
-"**Delta Chat has no own servers** but uses the most massive and diverse open messaging \n"
+"**Delta Chat doesn't have their own servers** but uses the most massive and diverse open messaging \n"
 "system ever: the existing e-mail server network."
 msgstr ""
+"**Delta Chat no tiene servidores propios** sino que utiliza el sistema de "
+"mensajería libre más masivo y diverso que existe: la red de servidores de "
+"correo electrónico existente."
 
 #: ../en/index.md:18
 msgid ""
