--- a/it/index.po
+++ b/it/index.po
@@ -1,15 +1,15 @@
 # Translators:
-# björn petersen <r10s@b44t.com>, 2018
 # Enrico B. <enricobe@hotmail.com>, 2019
+# björn petersen <r10s@b44t.com>, 2019
 # 
 #, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-02-16 15:37+0200\n"
+"POT-Creation-Date: 2019-02-24 12:01+0200\n"
 "PO-Revision-Date: 2018-03-23 12:35+0000\n"
-"Last-Translator: Enrico B. <enricobe@hotmail.com>, 2019\n"
+"Last-Translator: björn petersen <r10s@b44t.com>, 2019\n"
 "Language-Team: Italian (https://www.transifex.com/delta-chat/teams/76181/it/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -52,7 +52,7 @@ msgstr ""
 
 #: ../en/index.md:15
 msgid ""
-"**Delta Chat has no own servers** but uses the most massive and diverse open messaging \n"
+"**Delta Chat doesn't have their own servers** but uses the most massive and diverse open messaging \n"
 "system ever: the existing e-mail server network."
 msgstr ""
 "**DeltaChat non ha server propri**, ma usa il sistema di messaggistica più grande e \n"
