--- a/pl/download.po
+++ b/pl/download.po
@@ -76,12 +76,16 @@ msgid ""
 "* [download for Linux from "
 "flathub](https://flathub.org/apps/details/chat.delta.desktop)"
 msgstr ""
+"* [Pobierz dla Linuxa z "
+"flathub](https://flathub.org/apps/details/chat.delta.desktop)"
 
 #: ../en/download.md:26
 msgid ""
 "* [download for Mac from our github release "
 "page](https://github.com/deltachat/deltachat-desktop/releases/).  "
 msgstr ""
+"* [Pobierz dla Mac z naszej strony GitHub](https://github.com/deltachat"
+"/deltachat-desktop/releases/).  "
 
 #: ../en/download.md:28
 msgid ""
