Fix Typos in German GDPR site for trust and credibility

--- a/de/gdpr.po
+++ b/de/gdpr.po
@@ -64,7 +64,7 @@ msgstr "# Die **DSGVO** und **Delta Chat** Messenger Kommunikation"
 msgid ""
 "- Does not require any **consent** (article 7 GDPR) from the users or their "
 "contacts (data subjects), because no address-book-data is transmitted."
-msgstr "Unsere derzeitge Sicht der Dinge (16.05.2018):"
+msgstr "Unsere derzeitige Sicht der Dinge (16.05.2018):"
 
 #: ../en/gdpr.md:21
 msgid ""
@@ -111,7 +111,7 @@ msgid ""
 "  as well as on the **data protection certification process**, Article 25 (3), 42 GDPR."
 msgstr ""
 "- Eine **Datenschutz-Folgeabschätzung** ist durch fehlende Messenger-"
-"Datenverabreitung **nicht notwendig**, Art. 35 DSGVO. Das Risiko für Rechte "
+"Datenverarbeitung **nicht notwendig**, Art. 35 DSGVO. Das Risiko für Rechte "
 "und Freiheiten natürlicher Personen beschränkt sich auf die "
 "unternehmensinterne Datenverarbeitung der E-Mail-Kommunikation und die der E"
 "-Mail-Provider."
